Resolve runtime version from packages and send it across the wire on handshake

--- a/clownfish-cli/pom.xml
+++ b/clownfish-cli/pom.xml
@@ -38,6 +38,7 @@
                     <archive>
                         <manifest>
                             <mainClass>fi.cdfdb.cli.ClownfishCli</mainClass>
+                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                         </manifest>
                     </archive>
                 </configuration>
