Reworked configuration to be more type safe and validatable

--- a/cf-config.properties
+++ b/cf-config.properties
@@ -1,2 +1,4 @@
 # Easy config file for overriding defaults while developing
 # Temporary ClownFish main reads this file and merges it with defaults
+
+threadpool.type=fixed
